# feishu-oauth-toolkit

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: bot-trigger.md  feishu-backend-setup.md
scripts/: start-bot.sh  start-server.sh  start-tunnel.sh  tunnel-url.sh
scripts/systemd/: feishu-bot.service  oauth-server.service  quick-tunnel.service
src/feishu_oauth/: __init__.py  __main__.py  auth.py  bot.py  card.py  config.py  server.py  trigger.py  verify.py
